# python-pauseonlock

./: .flake8  .gitignore  LICENSE  README.rst  pause-on-lock.py  pauseonlock.py  pytest.ini  requirements.txt  setup.cfg  setup.py
tests/: test_codestyle.py  test_init.py
