[metadata]
name =pauseonlock
version = 0.1.0
description= Pause/Resume your media players on screen locking/unlocking
long_description= file: README.rst
long_desccription_content_type = text/x-rst
author = Thomas Goldbrunner
author_email = thomas.goldbrunner@posteo.de
url = https://github.com/folixg/python-pauseonlock
project_urls =
    Bug Tracker = https://github.com/folixg/python-pauseonlock/issues
license = MIT
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Desktop Environment :: Gnome
    Topic :: Desktop Environment :: K Desktop Environment (KDE)
    Topic :: Desktop Environment :: Screen Savers
    Topic :: Desktop Environment :: Window Managers :: XFCE
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Multimedia :: Video
    Topic :: Utilities

[options]
py_modules = pauseonlock
install_requires = dbus-next>=0.2.2
python_requires = >=3.6
tests_require = pytest; pycodestyle

[options.extras_require]
    dev = pytest; black; flake8; flake8-bugbear; pycodestyle

[options.entry_points]
console_scripts =
    pauseonlock = pauseonlock:main
